Updates from Overleaf

--- a/l4proj.tex
+++ b/l4proj.tex
@@ -128,7 +128,11 @@ Ultimately, this project was not majorly influenced by the global pandemic, as t
 \section{Problem Space}
 \subsection{Java and Python}
 
+The decision to focus on a translator between Java and Python ultimately came from the fact that these are the two most prevalent programming languages in the Computing Science course at University of Glasgow. However there is strong justification for this language choice due to their relevance.
 
+Python is a highly popular language for a number of reasons, most notably it is easy to read and write, it is an interpreted language, it is dynamically typed, and it possesses a rich base library and garbage collection feature. (https://python.land/python-tutorial/what-is-python) A paper by Fangohr detailed a comparison carried out between C, MATLAB and Python as teaching languages in engineering. This paper heavily supports that python has an easy-to-use syntax and highlights that python is here to stay in industry, due to it's intuitive nature. A paper titled "An Empirical Comparison of Seven Programming Languages" also mapped the advantages of python performance-wise using empirical data, as it performed amongst the best when put up against 6 other well known programming languages. This evidence of both strong performance and syntactical-ease are enough to justify the importance of Python, thus the decision to use it as the target language for the programming language translator was clear.
+
+According to Oracle, 3 billion devices run on Java. 
 
 \todo{Remove the guidance notes from your dissertation before submitting!}
 
